--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,8 @@
 
+    body {
+        font-family: 'Indie Flower', cursive;
+
+    }
     h1 {
         margin-top: 50px;
         margin-bottom: 50px;
