--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,89 +1,37 @@
+.header {
+    position: fixed;
+    top: 0;
+    opacity: 0.85;
+    height: 80px;
+    width: 100%;
+    border-bottom: 1px solid grey;
+}
 
-    body {
-        font-family: 'Indie Flower', cursive;
+.logo {
+    float: left;
+    margin-left: 115px;
+    margin-top: 15px;
+    height: 50px;
+}
 
-    }
-    h1 {
-        margin-top: 50px;
-        margin-bottom: 50px;
-    }
+.header__nav {
+    float: right;
+    margin-right: 115px;
+    margin-top: 20px;
+}
 
-    input {
-        margin-bottom: 10px;
-    }
-    
-    .lb {
-        margin-top: 20px;
-    }
-    
-    .btn-primary {
-        background-color: black;
-        border-color: black;
-        font-family: 'Indie Flower', cursive;
-        font-size: 18px;
-    }
-    
-    .form-group {
-        width: 20%;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 50px;
-    }
-    
-    .logo {
-        position: absolute;
-        top: 40px;
-        width: 10%;
-        margin-left: 100px;
-        float: left;
-        float: top;
-    }
-    
-    .main {
-        width: 20%;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 50px;
-    }
-    
-    .main__info {
-        position: relative;
-    }
-    
-    .ul {
-        list-style-type: none;
-        padding: 0;
-    }
+.header__nav a {
+    color: black; 
+}
 
-    .main__avatar {
-        margin-bottom: 50px;
-        
-    }
-    .main__avatar img {
-        max-width: 300px;
-        max-height: 300px;
-        border-radius: 10px;
-    }
-    .main__avatar p {
-        font-size: 11;
-        margin-bottom: 0;
-    }
+.header_nav-links {
+    display: inline-block;
+}
 
-    .select {
-         opacity: 0; 
-        width: 190px;
-        height: 200px;
-        right: 730px;
-        position: absolute;
-        top: 190px;
-    }
+.main__avatar {
+    max-height: 40px;
+}
 
-    .error-block {
-        display: block;
-        font-size: 12px;
-        color: red;
-    }
-    
-    
+.dropdown-menu {
+    border: none;
+}
