--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,13 @@
+body {
+    font-family: 'Indie Flower', cursive;
+}
+
+.a {
+    color: black;
+}
+
 .header {
-    position: fixed;
+    position: relative;
     top: 0;
     opacity: 0.85;
     height: 80px;
@@ -34,4 +42,71 @@
 
 .dropdown-menu {
     border: none;
+}
+
+.main__profile {
+    position: relative;
+    text-align: center;
+    margin-top: 70px;
+    margin-bottom: 50px;
+}
+
+.col-md-4 {
+    border-left: 1px solid grey;
+}
+
+.main__h3-personal {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.main__avatar-big {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.main__avatar-big img {
+    max-width: 220px;
+    max-height: 220px;
+}
+
+.main__avatar-big p {
+    font-size: 15px;
+}
+
+.select{
+    width: 180px;
+    height: 180px;
+    margin: 0;
+    position: absolute;
+    top: 40px;
+    left: 180px;
+    opacity: 0;
+    z-index: 5;
+}
+
+.btn-set {
+    position: relative;
+}
+
+.main__info {
+    text-align: center;
+    margin-top: 40px;
+}
+
+.main__info-ul {
+    list-style-type: none;
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+.main__info-ul li {
+    margin-bottom: 8px;
+}
+
+.main__h2-portfolio {
+    text-align: center;
 }
