--- a/public/css/default.css
+++ b/public/css/default.css
@@ -85,5 +85,15 @@
         font-size: 12px;
         color: red;
     }
+
+    .email {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .reset__h2 {
+        width: 100%;
+        text-align: center;
+        margin-top: 50px;
+    }
     
     
