--- a/public/css/main.css
+++ b/public/css/main.css
@@ -195,16 +195,17 @@ body {
     display: inline-block;
     position: relative;
 }
+.home__content__single-image__info-price {
+    float: right;
+}
 
 .home__content__single-image__work {
     text-align: center;
-    max-width: 100%;
-    max-height: 100%;
+    margin-bottom: 80px;
 }
 
 .home__content__single-image__work img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
 }
 .fa-cart-plus {
     font-size: 22px;
@@ -280,4 +281,8 @@ body {
 }
 .home__addition__button:hover {
     background-color: #FAF3F3;
+}
+.add-to-cart {
+    background-color: transparent;
+    border: none;
 }
